--- a/BaitTranslator/Strings/en-us/Resources.resw
+++ b/BaitTranslator/Strings/en-us/Resources.resw
@@ -171,4 +171,8 @@
   <data name="YesAnswer" xml:space="preserve">
     <value>Yes</value>
   </data>
+  <data name="Shell_Blank.Content" xml:space="preserve">
+    <value>Blank</value>
+    <comment>Navigation view item name for Blank</comment>
+  </data>
 </root>
